--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta name="description" content="Ultimate Vision is a modern business website for creative ideas and services.">
+<meta name="keywords" content="Ultimate Vision, business website, waseemvisu, creative services, portfolio">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ultimate Vision</title>
