--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head><meta name="description" content="Ultimate Vision is a modern business website for creative ideas and services.">
-<meta name="keywords" content="Ultimate Vision, business website, waseemvisu, creative services, portfolio">
+<meta name="keywords" content="Ultimate Vision, business website, waseemvisu, creative services, portfolio"><meta name="google-site-verification" content="az3kbvLmveHsK8tF6gWDqjf9PaoQuw9eWZEGOfYeG2s" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ultimate Vision</title>
