--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta name="description" content="Ultimate Vision is a modern business website for creative ideas and services.">
+<head><head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Ultimate Vision is a modern business website for creative ideas and services." />
+  <meta name="keywords" content="Ultimate Vision, business website, waseemvisu, creative services, portfolio" />
+  <title>Ultimate Vision</title>
+  <style>
+    /* Your CSS here */
+  </style>
+</head>
 <meta name="keywords" content="Ultimate Vision, business website, waseemvisu, creative services, portfolio"><meta name="google-site-verification" content="az3kbvLmveHsK8tF6gWDqjf9PaoQuw9eWZEGOfYeG2s" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
