--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       background-color: #121212;
       color: #ffffff;
     }
-    header {
+    header {<img src="UltimateVisionLogo.png" alt="Ultimate Vision Logo" width="150">
       background-color: #1f1f1f;
       padding: 20px;
       text-align: center;
