--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 </head>
 <body>
   <header>
-    <h1>Ultimate Vision</h1>
+  <img src="UltimateVisionLogo.png" alt="Ultimate Vision Logo" width="150">
+  <h1>Ultimate Vision</h1>
   </header>
+
 
   <main>
     <section>
