--- a/index.html
+++ b/index.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><head>
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ultimate Vision is a modern business website for creative ideas and services." />
-  <meta name="keywords" content="Ultimate Vision, business website, waseemvisu, creative services, portfolio" />
-  <title>Ultimate Vision</title>
-  <style>
-    /* Your CSS here */
-  </style>
-</head>
-<meta name="keywords" content="Ultimate Vision, business website, waseemvisu, creative services, portfolio"><meta name="google-site-verification" content="az3kbvLmveHsK8tF6gWDqjf9PaoQuw9eWZEGOfYeG2s" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Ultimate Vision is a modern business website for creative ideas and services.">
+  <meta name="keywords" content="Ultimate Vision, business website, waseemvisu, creative services, portfolio">
   <title>Ultimate Vision</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #121212;
-      color: #ffffff;
-    }
-    header {<img src="UltimateVisionLogo.png" alt="Ultimate Vision Logo" width="150">
-      background-color: #1f1f1f;
-      padding: 20px;
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: #fff;
       text-align: center;
     }
-    header h1 {
+    header {
+      padding: 30px 0;
+      background-color: #000;
+    }
+    header img {
+      width: 120px;
+      height: auto;
+    }
+    h1 {
       color: #facc15;
-      font-size: 32px;
-      margin: 0;
+      margin-top: 10px;
     }
     main {
-      padding: 40px;
-      text-align: center;
+      padding: 40px 20px;
     }
     section {
       margin-bottom: 40px;
@@ -41,38 +35,37 @@
     h2 {
       color: #facc15;
     }
-    .social-icons a {
-      margin: 0 10px;
-      color: #38bdf8;
-      text-decoration: none;
+    .social-icons img {
+      width: 32px;
+      margin: 10px;
+      vertical-align: middle;
     }
     footer {
-      background-color: #1f1f1f;
-      text-align: center;
-      padding: 15px;
-      margin-top: 40px;
+      background-color: #000;
+      padding: 20px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <header>
-  <img src="UltimateVisionLogo.png" alt="Ultimate Vision Logo" width="150">
-  <h1>Ultimate Vision</h1>
-  </header>
 
+  <header>
+    <img src="logo.png" alt="Ultimate Vision Logo" />
+    <h1>Ultimate Vision</h1>
+  </header>
 
   <main>
     <section>
       <h2>About Us</h2>
-      <p>Ultimate Vision creates clean, modern web designs that help your ideas stand out.</p>
+      <p>We create clean, modern web designs that help your ideas stand out.</p>
     </section>
 
     <section>
-      <h2>Connect with Us</h2>
+      <h2>Connect With Us</h2>
       <div class="social-icons">
-        <a href="https://facebook.com" target="_blank">Facebook</a>
-        <a href="https://twitter.com" target="_blank">Twitter</a>
-        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="https://facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+        <a href="https://twitter.com" target="_blank"><img src="twitter.png" alt="Twitter"></a>
+        <a href="https://instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
       </div>
     </section>
   </main>
@@ -80,5 +73,6 @@
   <footer>
     &copy; 2025 Ultimate Vision. All rights reserved.
   </footer>
+
 </body>
 </html>
