--- a/index.html
+++ b/index.html
@@ -8,64 +8,69 @@
   <title>Ultimate Vision</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #111;
-      color: #fff;
-      text-align: center;
+      margin: 0;
+      background-color: #121212;
+      color: #ffffff;
     }
+
     header {
-      padding: 30px 0;
-      background-color: #000;
+      text-align: center;
+      padding: 30px 20px 10px;
     }
-    header img {
-      width: 120px;
-      height: auto;
-    }
-    h1 {
+
+    header h1 {
       color: #facc15;
-      margin-top: 10px;
+      font-size: 36px;
+      margin: 0;
     }
+
     main {
       padding: 40px 20px;
+      text-align: center;
     }
+
     section {
       margin-bottom: 40px;
     }
+
     h2 {
       color: #facc15;
     }
-    .social-icons img {
-      width: 32px;
-      margin: 10px;
-      vertical-align: middle;
+
+    .social-icons a {
+      margin: 0 15px;
+      color: #38bdf8;
+      text-decoration: none;
+      font-size: 18px;
     }
+
     footer {
-      background-color: #000;
-      padding: 20px;
+      background-color: #1f1f1f;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
       font-size: 14px;
     }
   </style>
 </head>
 <body>
-
   <header>
-    <img src="logo.png" alt="Ultimate Vision Logo" />
     <h1>Ultimate Vision</h1>
   </header>
 
   <main>
     <section>
       <h2>About Us</h2>
-      <p>We create clean, modern web designs that help your ideas stand out.</p>
+      <p>Ultimate Vision creates clean, modern web designs that help your ideas stand out.</p>
     </section>
 
     <section>
-      <h2>Connect With Us</h2>
+      <h2>Connect with Us</h2>
       <div class="social-icons">
-        <a href="https://facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-        <a href="https://twitter.com" target="_blank"><img src="twitter.png" alt="Twitter"></a>
-        <a href="https://instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
+        <a href="https://facebook.com" target="_blank">Facebook</a>
+        <a href="https://twitter.com" target="_blank">Twitter</a>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
       </div>
     </section>
   </main>
@@ -73,6 +78,5 @@
   <footer>
     &copy; 2025 Ultimate Vision. All rights reserved.
   </footer>
-
 </body>
 </html>
