--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     }
 
     header {
+      background-color: #1f1f1f;
+      padding: 20px;
       text-align: center;
-      padding: 30px 20px 10px;
     }
 
     header h1 {
@@ -26,7 +27,7 @@
     }
 
     main {
-      padding: 40px 20px;
+      padding: 40px;
       text-align: center;
     }
 
@@ -39,7 +40,7 @@
     }
 
     .social-icons a {
-      margin: 0 15px;
+      margin: 0 10px;
       color: #38bdf8;
       text-decoration: none;
       font-size: 18px;
@@ -50,7 +51,6 @@
       text-align: center;
       padding: 15px;
       margin-top: 40px;
-      font-size: 14px;
     }
   </style>
 </head>
