--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 
     header {
       background-color: #1f1f1f;
-      padding: 20px;
+      padding: 30px 20px 10px;
       text-align: center;
+    }
+
+    header img {
+      width: 140px;
+      height: auto;
+      margin-bottom: 10px;
     }
 
     header h1 {
@@ -27,7 +33,7 @@
     }
 
     main {
-      padding: 40px;
+      padding: 40px 20px;
       text-align: center;
     }
 
@@ -40,7 +46,7 @@
     }
 
     .social-icons a {
-      margin: 0 10px;
+      margin: 0 15px;
       color: #38bdf8;
       text-decoration: none;
       font-size: 18px;
@@ -51,11 +57,14 @@
       text-align: center;
       padding: 15px;
       margin-top: 40px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
+
   <header>
+    <img src="logo.png" alt="Ultimate Vision Logo">
     <h1>Ultimate Vision</h1>
   </header>
 
@@ -66,7 +75,7 @@
     </section>
 
     <section>
-      <h2>Connect with Us</h2>
+      <h2>Connect With Us</h2>
       <div class="social-icons">
         <a href="https://facebook.com" target="_blank">Facebook</a>
         <a href="https://twitter.com" target="_blank">Twitter</a>
@@ -78,5 +87,6 @@
   <footer>
     &copy; 2025 Ultimate Vision. All rights reserved.
   </footer>
+
 </body>
 </html>
